examples/test/testpolicy18215.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18215
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key37: value46
      key22: value17
      key33: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value18
          key23: value33
          key42: value25
      podSelector:
        matchLabels:
          key3: value47
          key29: value16
